- remove internal URL

--- a/integration.ini
+++ b/integration.ini
@@ -5,4 +5,4 @@
 
 [JiraClientRest2Protocol]
 class="com.atlassian.jira.unittest.api.protocol.JiraClientRest2ProtocolTest"
-args="https://inside.1and1.org/development/jira/rest/api/2/|user|pass"
+args="https://jira/rest/api/2/|user|pass"
