- add JIRA query

--- a/unittest.ini
+++ b/unittest.ini
@@ -5,3 +5,6 @@
 
 [JiraClientProtocolFactory]
 class="com.atlassian.jira.unittest.api.protocol.JiraClientProtocolFactoryTest"
+
+[JiraQuery]
+class="com.atlassian.jira.unittest.api.query.JiraQueryTest"
