- add IN and NOT_IN operators - add unittests for JiraQueryOp enum

--- a/unittest.ini
+++ b/unittest.ini
@@ -8,3 +8,6 @@ class="com.atlassian.jira.unittest.api.protocol.JiraClientProtocolFactoryTest"
 
 [JiraQuery]
 class="com.atlassian.jira.unittest.api.query.JiraQueryTest"
+
+[JiraQueryOp]
+class="com.atlassian.jira.unittest.api.query.JiraQueryOpTest"
