- add tests for JiraQueryResult

--- a/unittest.ini
+++ b/unittest.ini
@@ -11,3 +11,6 @@ class="com.atlassian.jira.unittest.api.query.JiraQueryTest"
 
 [JiraQueryOp]
 class="com.atlassian.jira.unittest.api.query.JiraQueryOpTest"
+
+[JiraQueryResult]
+class="com.atlassian.jira.unittest.api.query.JiraQueryResultTest"
