--- a/unittest.ini
+++ b/unittest.ini
@@ -14,3 +14,6 @@ class="com.atlassian.jira.unittest.api.query.JiraQueryOpTest"
 
 [JiraQueryResult]
 class="com.atlassian.jira.unittest.api.query.JiraQueryResultTest"
+
+[JiraIssue]
+class="com.atlassian.jira.unittest.api.types.JiraIssueTest"
