- add JiraIssueType and tests for this class

--- a/unittest.ini
+++ b/unittest.ini
@@ -17,3 +17,6 @@ class="com.atlassian.jira.unittest.api.query.JiraQueryResultTest"
 
 [JiraIssue]
 class="com.atlassian.jira.unittest.api.types.JiraIssueTest"
+
+[JiraIssueType]
+class="com.atlassian.jira.unittest.api.types.JiraIssueTypeTest"
