- add JiraComponent and tests

--- a/unittest.ini
+++ b/unittest.ini
@@ -20,3 +20,6 @@ class="com.atlassian.jira.unittest.api.types.JiraIssueTest"
 
 [JiraIssueType]
 class="com.atlassian.jira.unittest.api.types.JiraIssueTypeTest"
+
+[JiraComponent]
+class="com.atlassian.jira.unittest.api.types.JiraComponentTest"
