- add JiraProject class and tests

--- a/unittest.ini
+++ b/unittest.ini
@@ -23,3 +23,6 @@ class="com.atlassian.jira.unittest.api.types.JiraIssueTypeTest"
 
 [JiraComponent]
 class="com.atlassian.jira.unittest.api.types.JiraComponentTest"
+
+[JiraProject]
+class="com.atlassian.jira.unittest.api.types.JiraProjectTest"
