--- a/unittest.ini
+++ b/unittest.ini
@@ -26,3 +26,6 @@ class="com.atlassian.jira.unittest.api.types.JiraComponentTest"
 
 [JiraProject]
 class="com.atlassian.jira.unittest.api.types.JiraProjectTest"
+
+[JiraPerson]
+class="com.atlassian.jira.unittest.api.types.JiraPersonTest"
