- add class JiraIssueFields and tests # still not complete

--- a/unittest.ini
+++ b/unittest.ini
@@ -29,3 +29,6 @@ class="com.atlassian.jira.unittest.api.types.JiraProjectTest"
 
 [JiraPerson]
 class="com.atlassian.jira.unittest.api.types.JiraPersonTest"
+
+[JiraIssueFields]
+class="com.atlassian.jira.unittest.api.types.JiraIssueFieldsTest"
