- add JiraStatus class and test - make use of new JiraStatus in JiraIssueFields

--- a/unittest.ini
+++ b/unittest.ini
@@ -32,3 +32,6 @@ class="com.atlassian.jira.unittest.api.types.JiraPersonTest"
 
 [JiraIssueFields]
 class="com.atlassian.jira.unittest.api.types.JiraIssueFieldsTest"
+
+[JiraStatus]
+class="com.atlassian.jira.unittest.api.types.JiraStatusTest"
