- add JiraPriority object

--- a/unittest.ini
+++ b/unittest.ini
@@ -35,3 +35,6 @@ class="com.atlassian.jira.unittest.api.types.JiraIssueFieldsTest"
 
 [JiraStatus]
 class="com.atlassian.jira.unittest.api.types.JiraStatusTest"
+
+[JiraPriority]
+class="com.atlassian.jira.unittest.api.types.JiraPriorityTest"
