- add tests for JiraQueryCriteria

--- a/unittest.ini
+++ b/unittest.ini
@@ -9,6 +9,9 @@ class="com.atlassian.jira.unittest.api.protocol.JiraClientProtocolFactoryTest"
 [JiraQuery]
 class="com.atlassian.jira.unittest.api.query.JiraQueryTest"
 
+[JiraQueryCriteria]
+class="com.atlassian.jira.unittest.api.query.JiraQueryCriteriaTest"
+
 [JiraQueryOp]
 class="com.atlassian.jira.unittest.api.query.JiraQueryOpTest"
 
