- add tests for gadgets

--- a/src/resources/unittest/unittest.ini
+++ b/src/resources/unittest/unittest.ini
@@ -41,3 +41,9 @@ class="com.atlassian.jira.unittest.api.types.JiraStatusTest"
 
 [JiraPriority]
 class="com.atlassian.jira.unittest.api.types.JiraPriorityTest"
+
+[JiraGadget]
+class="com.atlassian.jira.unittest.api.gadget.JiraGadgetTest"
+
+[JiraGadgetResult]
+class="com.atlassian.jira.unittest.api.gadget.JiraGadgetResultTest"
