--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "keywords": ["module", "xp"],
   "require" : {
     "xp-framework/core" : "dev-master",
-    "xp-framework/webservices"  : "~6.0",
+    "xp-framework/rest" : "~6.0",
     "php" : ">=5.4.0"
   },
   "autoload" : {
