--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,22 @@
 
 language: php
 
+sudo: false
+
 php:
   - 5.4
   - 5.5
   - 5.6
   - hhvm
-  - hhvm-nightly
+  - nightly
 
 matrix:
   allow_failures:
     - php: hhvm
-    - php: hhvm-nightly
+    - php: nightly
 
 before_script:
-  - wget 'https://github.com/xp-framework/xp-runners/releases/download/v5.2.0/setup' -O - | php
+  - wget 'https://github.com/xp-framework/xp-runners/releases/download/v5.5.0/setup' -O - | php
   - composer install --prefer-dist
   - echo "vendor/autoload.php" > composer.pth
   - echo "use=vendor/xp-framework/core" > xp.ini
