Drop PHP 5.4 support

--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
   "description" : "Atlassian JIRA client API for XP Framework",
   "keywords": ["module", "xp"],
   "require" : {
-    "xp-framework/core" : "~6.0",
-    "xp-framework/rest" : "~6.0",
-    "php" : ">=5.4.0"
+    "xp-framework/core" : "^6.5",
+    "xp-framework/rest" : "^6.5",
+    "xp-framework/networking" : "^6.6",
+    "xp-framework/collections" : "^6.5",
+    "php" : ">=5.5.0"
   },
   "autoload" : {
     "files" : ["src/main/php/autoload.php"]
