Add xp-framework/unittest dependency

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     "xp-framework/collections" : "^6.5",
     "php" : ">=5.5.0"
   },
+  "require-dev" : {
+    "xp-framework/unittest": "^6.5"
+  },
   "autoload" : {
     "files" : ["src/main/php/autoload.php"]
   }
